--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -13,6 +13,13 @@
         android:layout_height="wrap_content"
         android:text="Take Photo"
         android:textAllCaps="false"/>
+    <Button
+        android:id="@+id/choose_from_album"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Choose From Album"
+        android:textAllCaps="false"/>
+
     <ImageView
         android:id="@+id/picture"
         android:layout_width="wrap_content"
